--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <p>Radio check. Pilot, please confirm.</p>
    <p>Yes, finally.</p>
    <p>Good! It is Friday!!</p>
+   <p>Now it is Wednesday.</p>
 </body>
 </html>
