another work added.

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
    <p>Yes, finally.</p>
    <p>Good! It is Friday!!</p>
    <p>Now it is Wednesday.</p>
+   <p>Yes, it works good!</p>
 </body>
 </html>
