--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+      <head>
+         <link rel="stylesheet" type="text/css" href="style.css">
+      </head>
+
 <body>
    <p>Radio check. Pilot, please confirm.</p>
    <p>Yes, finally.</p>
